# polspice

./: ._README.html  CMakeLists.txt  HISTORY  INSTALL  README  README.html  README.md
CMakeModules/: FindSharp.cmake
src/: Makefile_template  alm_type.F90  apodize_mod.f90  bin_llcl.py  compute_windows.F90  convert_to_ascii.f90  cumul2.f90  deal_with_filenames.F90  deal_with_files.F90  deal_with_options.F90  deal_with_xi_and_cl.f90  do_legendre.f90  fits_spice.F90  ispice.pro  ispice.py  map_type.F90  master_kernels.F90  my_pio_routines.F90  read_cov.pro  read_spice.pro  rec3jj.f90  rec3jjcmb.F90  remove_dipole_inc_210.f90  remove_dipole_inc_test.f90  remove_dipole_mod.f90  sets.F90  sharp_f_interface.F90  sharp_interface.c  sharp_interface_inc.c  spice.F90  spice_common.F90  spice_parameters.F90  spice_subs.f90  test_cov.pro  test_misc.F90  test_sets.f90  test_sharp.f90  test_spice.pro
